# MyTanks

./: Bullet.cpp  Bullet.h  CMakeLists.txt  Card.cpp  Card.h  CollisionUtils.cpp  CollisionUtils.h  Config.cpp  Config.h  Environment.cpp  Environment.h  GameMenu.cpp  GameMenu.h  Player.cpp  Player.h  README.md  SRV.cpp  Score.cpp  main.cpp  redactor.cpp  redactor.h
item/: Bullet.cpp  Bullet.h  Environment.cpp  Player.h  Score.cpp  Score.h
model/: Card.cpp  GameMenu.cpp  GameMenu.h
srv/: CollisionUtils.cpp  CollisionUtils.h  Config.cpp  Config.h
